# BigInt_Calculator_C

./: CMakeLists.txt  LICENSE  README.md
include/: bigint.h  imports.h  operations.h
src/: bigint.c  main.c  operations.c
